fix cucumbers-button on mobile

--- a/app/static/content.css
+++ b/app/static/content.css
@@ -21,7 +21,8 @@
   border: none;
   outline: none;
   display: inline-block;
-  width: 500px;
+  width: 90vw;
+  max-width: 500px;
   height: 300px;
   background-size: contain;
   background-repeat: no-repeat;
